[gd_scene load_steps=2 format=2]

[ext_resource path="res://FileMenu.gd" type="Script" id=1]

[node name="FileMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="HBox" type="HBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="FileMenu" type="MenuButton" parent="HBox"]
margin_right = 35.0
margin_bottom = 40.0
text = "File"

[node name="SubMenu" type="PopupMenu" parent="HBox/FileMenu"]
margin_right = 20.0
margin_bottom = 20.0

[node name="AboutMenu" type="MenuButton" parent="HBox"]
margin_left = 39.0
margin_right = 89.0
margin_bottom = 40.0
text = "About"

[node name="FileDialog" type="FileDialog" parent="."]
margin_right = 602.0
margin_bottom = 325.0
access = 2

[node name="Label" type="Label" parent="."]
margin_left = 23.0
margin_top = 291.0
margin_right = 248.0
margin_bottom = 305.0
